--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Testing network connections</title>
+  <title></title>
   <script defer src="main.dart.js" type="application/javascript"></script>
 </head>
 <body>
